# abap-keywords-bot

./: .gitignore  LICENSE  Pipfile  README.md  bot.py  bot.sh  package-lock.json  pyproject.toml  serverless.yml
data/: build_keyword_list.py  keywords.json
